methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:1: error: Missing closing brace `}' assumed here
override def run() {
^MethodsPicture:1: error: expected start of definition
override def run() {
         ^MethodsPicture:6: error: expected class or object definition
def marque(c:Color){
^MethodsPicture:12: error: expected class or object definition
def faireV(c:Color){
^MethodsPicture:22: error: expected class or object definition
def faireCadre() {
^MethodsPicture:35: error: expected class or object definition
def faireLigne(){
^